--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "commit": "git-fcm"
+    "commit": "git-fcm",
+    "pwa-serve": "http-server -p 8080 -c-1 dist/weatherRybno",
+    "pwa-bs": "ng build --prod && http-server -p 8080 -c-1 dist/weatherRybno"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +21,9 @@
     "@angular/forms": "~10.0.5",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
+    "@angular/pwa": "^0.1001.4",
     "@angular/router": "~10.0.5",
+    "@angular/service-worker": "~10.0.5",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -33,6 +37,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "git-fcm": "^0.3.1",
+    "http-server": "^0.12.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
