--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "commit": "git-fcm"
+    "commit": "git-fcm",
+    "pwa-serve": "http-server -p 8080 -c-1 dist/weatherRybno",
+    "pwa-bs": "ng build --prod && http-server -p 8080 -c-1 dist/weatherRybno"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +35,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "git-fcm": "^0.3.1",
+    "http-server": "^0.12.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
